# native-nmm

chat-ui/: README.md
chat-ui/src/components/: ChatUI.tsx
native-nmm/: README.md  pyproject.toml
native-nmm/configs/: model.yaml
native-nmm/scripts/: server_chat.py
native-nmm/src/nmm/models/: self_attn.py
